--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="category-details">B.S. in Computer Science: <i>Info-Internetworks and Media,</i> GPA: 3.05, Major GPA: 3.31<br>August 2008 - May 2014</p>
 
         <h2 class="category-headers">Professional Experience</h2><hr>
-            <p class="primary-titles">Salesforce | <span class="location">San Francisco, CA</span></p>
+            <p class="primary-titles"><span class="salesforce-color">Salesforce</span> | <span class="location">San Francisco, CA</span></p>
                 <p class="category-details">Member of Technical Staff<br>June 2014 - Present</p>
                 <p class="category-description">Graphic Design project lead: responsible for the creation, development and production management of large- and small-scale cultural history and conservation education projects for a range of clients and uses.</p>
             <p class="primary-titles">Hero Design Studio | <span class="location">Denver, CO</span></p>
