getting closer, have prof experience and skills

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>Taylor Peet</title>
     <meta charset="utf-8">
     <link href="main.css" media="screen" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Gudea">
-    <link rel="shortcut icon" href="http://faviconist.com/icons/f9294cc2281f1004e846adbea5f4b316/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Gudea">
+    <link rel="shortcut icon" href="//faviconist.com/icons/f9294cc2281f1004e846adbea5f4b316/favicon.ico" />
 </head>
 <body>
     <header class="header-details">
@@ -24,20 +24,29 @@
         <h2 class="category-headers">Summary</h2><hr>
             <p class="category-description-main">Currently a Software Developer at Salesforce, I am moving more towards HCI, specifically Interaction Design. As put so eloquently in the original Tron: <strong>"I fight for the user!"</strong>, working to bring their voice to the table throughout the development process.</p>
 
+
         <h2 class="category-headers">Education</h2><hr>
-            <p class="primary-titles">Georgia Institute of Technology | <span class="location">Atlanta, GA</span></p>
-            <p class="category-details">B.S. in Computer Science: <i>Info-Internetworks and Media,</i> GPA: 3.05, Major GPA: 3.31<br>August 2008 - May 2014</p>
+            <p class="primary-titles"><span class="gatech-buzz-color">Georgia Institute of Technology</span> |<span class="location">Atlanta, GA</span></p><div></div>
+            <p class="category-details">B.S. in Computer Science: <i>Info-Internetworks and Media,</i> GPA: 3.05, Major GPA: 3.31<span class="right-date">August 2008 - May 2014</span></p><div></div>
+            <p class="category-details">Study Abroad Program in Oxford, England (Summer '10)</p>
+
 
         <h2 class="category-headers">Professional Experience</h2><hr>
-            <p class="primary-titles"><span class="salesforce-color">Salesforce</span> | <span class="location">San Francisco, CA</span></p>
-                <p class="category-details">Member of Technical Staff<br>June 2014 - Present</p>
-                <p class="category-description">Graphic Design project lead: responsible for the creation, development and production management of large- and small-scale cultural history and conservation education projects for a range of clients and uses.</p>
-            <p class="primary-titles">Hero Design Studio | <span class="location">Denver, CO</span></p>
-                <p class="category-details">Contract Production Artist<br>Fall 2008</p>
-            <p class="primary-titles">Archetype 5 | <span class="location">Boulder, CO</span></p>
-                <p class="category-details">Graphic Designer<br>2007–2008</p>
-            <p class="primary-titles">Workshop Design, Inc. | <span class="location">Kansas City, MO</span></p>
-                <p class="category-details">Intern, print and environmental design<br>2006</p>
+            <p class="primary-titles"><span class="salesforce-color">Salesforce</span> |<span class="location">San Francisco, CA</span></p><br>
+                <p class="category-details">Member of Technical Staff<span class="right-date">July 2014 - Present</span></p>
+                <p class="category-description">Worked over several releases to design and build an extensible platform to connect data providers with Salesforce CRM users to clean their data. Mentored several new team members as well as interns.</p>
+            <p class="primary-titles"><span class="gatech-buzz-color">Georgia Tech College of Computing</span> | <span class="location">Atlanta, GA</span></p><br>
+                <p class="category-details">Teaching Assistant<span class="right-date">Spring 2014</span></p>
+                <p class="category-description">User Interface Design Class</p><!-- Worked with professor to create projects and homework, grade turned in items, and respond to students' questions. -->
+                <p class="category-details">Sys-Admin Assistant<span class="right-date">April 2012 - December 2013</span></p>
+                <p class="category-description">Worked with Sys-Admin to learn workflows and develope best practices. Assisted in data center management.</p>
+            <p class="primary-titles"><span class="salesforce-color">Salesforce</span> |<span class="location">San Francisco, CA</span></p><br>
+                <p class="category-details">Member of Technical Staff<span class="right-date">May 2013 - August 2013</span></p>
+                <p class="category-description">Developed, tested, and packaged two web-based reference applications for the pilot release of an API. Both applications were shipped with the API to the pilot companies as an example of implementation.</p>
+            <p class="primary-titles"><span class="electrolux-color">Electrolux</span> |<span class="location">Anderson, SC</span></p><br>
+                <p class="category-details">Engineering Co-Op Student<span class="right-date">January 2011 - August 2012</span></p>
+                <p class="category-description">Took individual projects from ideation to completion, worked with engineers on product-wide projects.</p>
+
 
         <h2 class="category-headers">Code</h2><hr>
             <a class="primary-titles" href="http://github.com/RePeet13/SocialSmarts" target="_blank">Social Smarts | <p class="links">github.com/RePeet13/SocialSmarts</p></a>
@@ -51,5 +60,29 @@
             <a class="primary-titles" href="https://github.com/RePeet13/resume" target="_blank">Résumé | <p class="links">github.com/RePeet13/resume</p></a>
             <p class="category-description">Take a look under the hood of this page on GitHub (or see the PDF print version <a class="links" href="http://f.cl.ly/items/2D2S2u0L0Z2B3x0o3X1Y/LouisaBarrett_resume.pdf" target="_blank">here</a>). Constructive feedback is always welcome and appreciated.</p>
 
+
+        <h2 class="category-headers">Skills</h2><hr>
+            <ul>
+                <li><p class="category-description">Languages: <strong>Java</strong>, Python, Javascript, MySQL, PL/SQL, PHP, C, Matlab</p></li>
+                <li><p class="category-description">Agile Development, Scrum Master: Led daily standup for group of mixed local and remote employees</p></li>
+                <li><p class="category-description">Operating Systems: Windows User, Mac OSX User, and Linux (server and desktop) Admin/User</p></li>
+                <li><p class="category-description">Experienced with Eclipse, Git, Subversion, Trac, CADD, Microsoft Office Suite, Adobe Creative Suite</p></li>
+                <li><p class="category-description">Planned, built, upgraded, and maintained many computers, servers, and home networks from components</p></li>
+                <li><p class="category-description">Effective leadership, teaching, and communication skills; able to work well individually or within a group</p></li>
+            </ul>
+
+<!--
+        <h2 class="category-headers">Leadership Activities</h2><hr>
+            <a class="primary-titles" href="http://github.com/RePeet13/SocialSmarts" target="_blank">Social Smarts | <p class="links">github.com/RePeet13/SocialSmarts</p></a>
+            <p class="category-description">As part of a five-person team and using the Twitter and Klout APIs, created a social media management app that allows a user to process incoming tweets based on various criteria. Primary role was designing and building the front-end from scratch, emphasizing a straightforward and simple experience for the user</p>
+            <a class="primary-titles" href="https://github.com/RePeet13/fundit" target="_blank">FundIt | <p class="links">github.com/RePeet13/fundit</p></a>
+            <p class="category-description">A small, solo project creating a fund-raising site built to practice using Ruby, Rails and RSpec.</p>
+            <a class="primary-titles" href="https://github.com/RePeet13/checkers" target="_blank">Checker Board | <p class="links">github.com/RePeet13/checkers</p></a>
+            <p class="category-description">Practicing Ruby fundamentals by building a game-board for a game of checkers.</p>
+            <a class="primary-titles" href="https://github.com/RePeet13/command-query_practice" target="_blank">Command Query | <p class="links">github.com/RePeet13/command-query_practice</p></a>
+            <p class="category-description">Solutions to a series of kata-like tests practicing how objects change in Ruby</p>
+            <a class="primary-titles" href="https://github.com/RePeet13/resume" target="_blank">Résumé | <p class="links">github.com/RePeet13/resume</p></a>
+            <p class="category-description">Take a look under the hood of this page on GitHub (or see the PDF print version <a class="links" href="http://f.cl.ly/items/2D2S2u0L0Z2B3x0o3X1Y/LouisaBarrett_resume.pdf" target="_blank">here</a>). Constructive feedback is always welcome and appreciated.</p>
+-->
     </section>
 </body>
